--- a/assets/css/corona.css
+++ b/assets/css/corona.css
@@ -64,7 +64,7 @@ h2 a {
 .container td, .container th {
 	  padding-bottom: 2%;
 	  padding-top: 2%;
-  padding-left:2%;  
+    padding-left: 2%;  
 }
 
 /* Background-color of the odd rows */
@@ -109,29 +109,136 @@ h2 a {
 .container th:nth-child(4) { display: none; }
 }
 
-#header .logo {
-  display: inline-block;
-  height: inherit;
-  left: 1.5em;
-  line-height: inherit;
-  margin: 0;
-  padding: 0;
-  position: absolute;
-}
-
-  #header .logo a {
-    font-size: 1.25em;
-    color: #fff;
-    font-weight: 600;
-    text-decoration: none;
+  #header {
+    background-color: transparent;
+    color: #fdd1d1;
+    cursor: default;
+    height: 3.25em;
+    left: 0;
+    line-height: 3.25em;
+    position: fixed;
+    text-align: right;
+    top: 1em;
+    width: 100%;
+    z-index: 10001;
+    padding: 0 1.5em;
   }
 
-    #header .logo a:hover {
-      color: #fff;
+    #header.alt {
+      top: 0;
+      background: #d92e14;
     }
 
-  #header .logo span {
-    font-weight: 300;
-    font-size: .8em;
-    color: #FFF;
+    #header .logo {
+      display: inline-block;
+      height: inherit;
+      left: 1.5em;
+      line-height: inherit;
+      margin: 0;
+      padding: 0;
+      position: absolute;
+      top: 0;
+    }
+
+      #header .logo a {
+        font-size: 1.25em;
+        color: #fff;
+        font-weight: 600;
+        text-decoration: none;
+      }
+
+        #header .logo a:hover {
+          color: #fff;
+        }
+
+      #header .logo span {
+        font-weight: 300;
+        font-size: .8em;
+        color: #FFF;
+      }
+
+    #header > a {
+      -moz-transition: color 0.2s ease-in-out;
+      -webkit-transition: color 0.2s ease-in-out;
+      -ms-transition: color 0.2s ease-in-out;
+      transition: color 0.2s ease-in-out;
+      display: inline-block;
+      color: inherit;
+      text-decoration: none;
+    }
+
+      #header > a[href="#menu"] {
+        text-decoration: none;
+        -webkit-tap-highlight-color: transparent;
+        background: rgba(255, 255, 255, 0.15);
+        border-radius: 100%;
+        height: 2.5em;
+        width: 2.5em;
+        line-height: 2.5em;
+        color: #FFF;
+        text-align: center;
+      }
+
+        #header > a[href="#menu"]:before {
+          content: "";
+          -moz-osx-font-smoothing: grayscale;
+          -webkit-font-smoothing: antialiased;
+          font-family: FontAwesome;
+          font-style: normal;
+          font-weight: normal;
+          text-transform: none !important;
+        }
+
+        #header > a[href="#menu"]:hover {
+          color: rgba(255, 255, 255, 0.25);
+          background: none;
+          box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.25);
+        }
+
+        #header > a[href="#menu"]:before {
+          margin: 0;
+        }
+
+        #header > a[href="#menu"] span {
+          display: none;
+        }
+
+      @media screen and (max-width: 736px) {
+
+        #header > a {
+          padding: 0 0.5em;
+        }
+
+      }
+
+  @media screen and (max-width: 980px) {
+
+    body.subpage {
+      padding-top: 50px;
+    }
+
+    #header {
+      height: 50px;
+      line-height: 50px;
+    }
+
+      #header > h1 {
+        left: 1em;
+      }
+
+        #header > h1 a {
+          font-size: 1em;
+        }
+
+  }
+
+  @media screen and (max-width: 480px) {
+
+    #header {
+      min-width: 320px;
+      top: 0;
+      font-size: .9em;
+      background: rgba(0, 0, 0, 0.9);
+    }
+
   }
